Table products {
  id uuid [pk, default: `gen_random_uuid()`]
  handle text [not null, unique, note: 'Human-readable slug or handle']
  title text [not null]
  description text
  vendor text
  category_id int [not null]
  status text [not null, default: 'draft', note: 'draft, active, archived']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table product_options {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [not null]
  name text [not null, note: 'Option name (e.g. Color, Size)']
  position int [default: 0]
  
  indexes {
    (product_id, position)
    (product_id, name) [unique]
  }
}

Table product_option_values {
  id uuid [pk, default: `gen_random_uuid()`]
  option_id uuid [not null]
  value text [not null]
  position int [default: 0]
  
  indexes {
    (option_id, position)
  }
}

Table variants {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [not null]
  sku text [unique, note: 'Unique SKU across all variants']
  barcode text
  title text
  price numeric(12,2)
  weight numeric(12,3)
  options jsonb [default: `'[]'::jsonb`, note: 'Stores selected option values']
  position int [default: 0, note: 'Display order within product']
  is_deleted boolean [default: false]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  
  indexes {
    (product_id, position)
  }
}

Table inventory_items {
  id uuid [pk, default: `gen_random_uuid()`]
  variant_id uuid [not null, unique]
  description text
  track_inventory boolean [default: true]
  created_at timestamptz [default: `now()`]
}

Table locations {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  type text [note: 'warehouse, store, etc.']
  address jsonb
  is_default bool
  created_at timestamptz [default: `now()`]
}

Table inventory_levels {
  id uuid [pk, default: `gen_random_uuid()`]
  inventory_item_id uuid [not null]
  location_id uuid [not null]
  available_qty integer
  reserved_qty integer
  updated_at timestamptz [default: `now()`]

  indexes {
    (inventory_item_id, location_id) [unique]
  }
}

Enum stock_move_type {
  IN
  OUT
  TRANSFER
  ADJUST
  RESERVE
  UNRESERVE
}

Table stock_moves {
  id uuid [pk, default: `gen_random_uuid()`]
  inventory_item_id uuid [not null]
  from_location_id uuid
  to_location_id uuid 
  move_type stock_move_type [not null]
  quantity integer
  created_by uuid
  reason text
  created_at timestamptz [default: `now()`]
}

Enum reservation_status {
  ACTIVE
  RELEASED
  EXPIRED
}

Table reservations {
  id uuid [pk, default: `gen_random_uuid()`]
  inventory_item_id uuid [not null]
  location_id uuid [not null]
  order_id uuid
  quantity integer
  reserved_at timestamptz [default: `now()`]
  expires_at timestamptz
  status          reservation_status [not null]
  released_at    timestamptz
}

Table category {
  id int [pk]
  name varchar(100)
  slug varchar(100)
  thumbnail varchar(500)
  description text
  created_at timestamp [default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product_media {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [not null]

  type varchar(20) [not null, default: 'image', note: 'image, video']
  url text [not null]
  alt_text text
  position int [not null, default: 0]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (product_id, position)
  }
}

Table variant_media {
  variant_id uuid [not null]
  media_id uuid [not null]
  position int [not null, default: 0]

  Indexes {
    (variant_id, position)
    (media_id)
  }

  indexes {
    (variant_id, media_id) [unique]
  }
}

Table product_reviews {
  id uuid [pk, default: `gen_random_uuid()`]
  product_id uuid [not null]
  variant_id uuid [note: 'Optional: reference to specific variant purchased']
  user_id uuid [not null, note: 'Reference to User/Auth Service ID']
  display_name varchar(100)
  rating int [not null, note: 'Allowed values: 1 to 5']
  title text [note: 'Short review summary headline']
  comment text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Indexes {
    (product_id, created_at) [name: 'idx_reviews_product_date']
    (user_id, product_id) [unique, name: 'uq_user_product_review']
  }
}


//////////////////////////////////////////////////////////////
// Relationships (for visualization)
//////////////////////////////////////////////////////////////

Ref: product_options.product_id > products.id
Ref: product_option_values.option_id > product_options.id
Ref: variants.product_id > products.id
Ref: inventory_items.variant_id > variants.id
Ref: inventory_levels.inventory_item_id > inventory_items.id
Ref: inventory_levels.location_id > locations.id
Ref: stock_moves.inventory_item_id > inventory_items.id
Ref: stock_moves.from_location_id > locations.id
Ref: stock_moves.to_location_id > locations.id
Ref: reservations.inventory_item_id > inventory_items.id
Ref: reservations.location_id > locations.id
Ref: products.category_id > category.id
Ref: "reservations"."id" < "reservations"."location_id"
Ref: "reservations"."id" < "reservations"."inventory_item_id"
Ref: "stock_moves"."id" < "stock_moves"."from_location_id"
Ref: product_media.product_id > products.id
Ref: variant_media.variant_id > variants.id
Ref: variant_media.media_id > product_media.id
Ref: product_reviews.product_id > products.id [delete: cascade]
Ref: product_reviews.variant_id > variants.id [delete: set null]